crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__dead_bindings__partial_strict_argument.snap
---
source: crates/nash-codegen/src/optimizer_tests/dead_bindings.rs
assertion_line: 34
expression: "crate::harness::pass_snapshot(b.arena, before,\nformat!(\"--- core before\\n{}\\n--- uplc before\\n{}\\n--- core after\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), baseline.uplc, pretty(after), candidate.uplc,\ncandidate.result, candidate.logs))"
---
--- unoptimized Core
let unused#5 : int -> int = addInteger (trace "kept" in 7) in
42
--- unoptimized UPLC
(program 1.1.0
  [(lam unused_5 (con integer 42))
    [(builtin addInteger)
      (force [[(force (builtin trace)) (con string "kept")] (delay (con integer 7))])]])
--- optimized Core
let anf#2 : int = trace "kept" in 7 in
42
--- optimized UPLC
(program 1.1.0
  [(lam builtin_2
    [(lam anf_1 (con integer 42))
      (force [[builtin_2 (con string "kept")] (delay (con integer 7))])])
    (force (builtin trace))])
--- isolated pass
--- core before
let unused#5 : int -> int = addInteger (trace "kept" in 7) in
42
--- uplc before
(program 1.1.0
  [(lam unused_5 (con integer 42))
    [(builtin addInteger)
      (force [[(force (builtin trace)) (con string "kept")] (delay (con integer 7))])]])
--- core after
let unused#5 : int -> int = addInteger (trace "kept" in 7) in
42
--- uplc after
(program 1.1.0
  [(lam unused_5 (con integer 42))
    [(builtin addInteger)
      (force [[(force (builtin trace)) (con string "kept")] (delay (con integer 7))])]])
--- result
(con integer 42)
--- logs
["kept"]
