crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__dead_bindings__strict_constructor.snap
---
source: crates/nash-codegen/src/optimizer_tests/dead_bindings.rs
expression: "format!(\"--- core before\\n{}\\n--- core after\\n{}\\n--- uplc before\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(after), baseline.uplc, candidate.uplc,\ncandidate.result, candidate.logs)"
---
--- core before
let unused#2 : @constr[0](int) = constr 0 error in
42
--- core after
let unused#2 : @constr[0](int) = constr 0 error in
42
--- uplc before
(program 1.1.0 [(lam unused_2 (con integer 42)) (constr 0 (error))])
--- uplc after
(program 1.1.0 [(lam unused_2 (con integer 42)) (constr 0 (error))])
--- result
error: ExplicitErrorTerm
--- logs
[]
